# rust-chat-backend

./: .env.development  .env.example  .env.local  .env.production  .env.staging  .gitignore  Cargo.toml  Dockerfile  MIGRATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  init.sql  requirement.md  switch_env.sh  test_api.sh  test_websocket.py
src/: config.rs  errors.rs  main.rs  utils.rs
src/db/: mod.rs
src/models/: message.rs  mod.rs  room.rs  room_member.rs  user.rs
src/routes/: auth.rs  mod.rs  room.rs  websocket.rs
src/services/: auth_service.rs  jwt_service.rs  message_service.rs  mod.rs  redis_service.rs
